turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:22: error: value x is not a member of Any
    x(i)(0)x(i)(1)
           ^Kerr36:22: error: Int does not take parameters
    x(i)(0)x(i)(1)
               ^